--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,32 @@
-
+beautifulsoup4==4.14.3
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+contourpy==1.3.3
+cryptography==46.0.3
+cycler==0.12.1
+filelock==3.20.1
+fonttools==4.61.1
+idna==3.11
+kiwisolver==1.4.9
+lxml==6.0.2
+matplotlib==3.10.8
+numpy==2.3.5
+packaging==25.0
+pandas==2.3.3
+pdfminer.six==20251107
+phonenumbers==9.0.20
+pillow==12.0.0
+pycparser==2.23
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+requests==2.32.5
+requests-file==3.0.1
+six==1.17.0
+soupsieve==2.8
+tldextract==5.3.0
+tqdm==4.67.1
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.2
