Ignore large snapshot artifacts permanently

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ EXECUTION_CORE/outputs/
 # Archive/quarantine
 _ARCHIVE/
 _QUARANTINE/
+
+# NEVER COMMIT SNAPSHOTS
+REPO_CODE_SNAPSHOT_FOR_CHATGPT.json
+REPO_SNAPSHOT_FOR_CHATGPT.json
+*SNAPSHOT*.json
